@@ -4,6 +4,8 @@
 
   * name argument to mock/stub is now optional (closes #782)
     * you can do mock(:foo => "woo", :bar => "car")
+  * expect { this_block }.to change(this).from(this).to(that)
+  * expect { this_block }.to raise_error
     
 * bug fixes
 
